--- a/Passwordgenerator/generator/templates/generator/home.html
+++ b/Passwordgenerator/generator/templates/generator/home.html
@@ -1,6 +1,26 @@
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<style>
+body{
+  background-image: url(https://res.cloudinary.com/dcrioc0sw/image/upload/v1618249552/jason-dent-3wPJxh-piRw-unsplash_xv4bkc.jpg)
+  
+}
+  h1{
+    font-family: 'Pacifico', cursive;
+    color: white;
+    font-size: 100px;
+    text-shadow: 2px 2px red;
+  }
+  form {
+    color:beige;
+    text-shadow: 2px 2px teal;
+  }
+  .btn-primary{
+    background:red;
+    font-family: 'Karantina', cursive;
+  }
+</style>
 <div class="container text-center">
 <h1>Password Generator</h1>
 
@@ -27,5 +47,6 @@
   <input type="submit" value="Generator Password" class="btn btn-primary">
 </form>
 </div>
+<style>
 
  
